--- a/app/src/main/res/layout/activity_d6.xml
+++ b/app/src/main/res/layout/activity_d6.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".D6">
+    tools:context=".D6Activity">
 
     <ImageView
         android:id="@+id/imageView_dice"
@@ -95,7 +95,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_dice_qty"
-        app:layout_constraintVertical_bias="0.688" />
+        app:layout_constraintVertical_bias="0.562" />
 
     <Button
         android:id="@+id/button_roll"
@@ -111,11 +111,11 @@
 
     <Button
         android:id="@+id/button_reset"
-        android:layout_width="69dp"
-        android:layout_height="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Reset"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:backgroundTint="#3F51B5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
